--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,13 @@ build
 .idea/**/dataSources/
 .idea/**/dataSources.ids
 .idea/**/dataSources.xml
-.idea/**/dataSources.local.xml
+.idea/**/dataSources.local.xmly m5m5555mjy,kuy1615j,k2mhg2322ertfghbng                     vb5gg55
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 
 # Gradle:
-.idea/**/gradle.xml
+.idea/**/gradle.xml       v    =c
 .idea/**/libraries
 
 # CMake
