--- a/.github/workflows/build-account-app.yml
+++ b/.github/workflows/build-account-app.yml
@@ -6,18 +6,30 @@ on:
       - "libs/greeter/**"
       - "libs/profile/**"
       - "*.gradle.kts"
+      - "gradle.properties"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11'
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Run gradle build
-        run: ./gradlew :apps:account-app:build
-
-      - uses: actions/upload-artifact@v2
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
+          java-version: '21'
+          distribution: 'corretto'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+
+      - name: Build account-app
+        run: cd apps/account-app && ../../gradlew build --no-daemon
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: account-app-jars
           path: apps/account-app/build/libs/*.jar
+          if-no-files-found: error
+
