--- a/.github/workflows/build-inventory-app.yml
+++ b/.github/workflows/build-inventory-app.yml
@@ -1,22 +1,34 @@
-vname: Build inventory-app
+name: Build inventory-app
 on:
   push:
     paths:
       - "apps/inventory-app/**"
       - "libs/profile/**"
       - "*.gradle.kts"
+      - "gradle.properties"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11'
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Run gradle build
-        run: ./gradlew :apps:inventory-app:build
-
-      - uses: actions/upload-artifact@v2
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
+          java-version: '21'
+          distribution: 'corretto'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+
+      - name: Build inventory-app
+        run: cd apps/inventory-app && ../../gradlew build --no-daemon
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: inventory-app-jars
           path: apps/inventory-app/build/libs/*.jar
+          if-no-files-found: error
+
