--- a/.github/workflows/build-account-app.yml
+++ b/.github/workflows/build-account-app.yml
@@ -1,4 +1,4 @@
-name: Build account-app
+xname: Build account-app
 on:
   push:
     paths:
@@ -6,30 +6,18 @@ on:
       - "libs/greeter/**"
       - "libs/profile/**"
       - "*.gradle.kts"
-      - "gradle.properties"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
         with:
-          java-version: '21'
-          distribution: 'corretto'
+          java-version: '11'
 
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v3
+      - name: Run gradle build
+        run: ./gradlew :apps:account-app:build
 
-      - name: Build account-app
-        run: cd apps/account-app && ../../gradlew build --no-daemon
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v2
         with:
-          name: account-app-jars
           path: apps/account-app/build/libs/*.jar
-          if-no-files-found: error
-
