--- a/.github/workflows/build-account-app.yml
+++ b/.github/workflows/build-account-app.yml
@@ -7,6 +7,7 @@ on:
       - "libs/profile/**"
       - "*.gradle.kts"
       - "gradle.properties"
+      - "gradle/wrapper/**"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,12 +20,20 @@ jobs:
         with:
           java-version: '21'
           distribution: 'corretto'
+          cache: 'gradle'  # Cache Maven dependencies
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
+        with:
+          # Cache configuration
+          cache-read-only: ${{ github.ref != 'refs/heads/main' }}
+          gradle-home-cache-cleanup: true
+          # Enable build scan for detailed insights
+          arguments: |
+            --scan
 
       - name: Build account-app
-        run: cd apps/account-app && ../../gradlew build --no-daemon
+        run: cd apps/account-app && ../../gradlew build --no-daemon --build-cache
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
