--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,6 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 org.gradle.parallel=true
 org.gradle.caching=true
 
-# Java version for Gradle build (Java 21)
-org.gradle.java.home=/Users/mehrajuddin.malik/Library/Java/JavaVirtualMachines/corretto-21.0.9/Contents/Home
+# Java toolchain is configured in build.gradle.kts (Java 21)
+# Don't set org.gradle.java.home here - let toolchain handle it
+
